--- a/5-11-Tide.ipynb
+++ b/5-11-Tide.ipynb
@@ -9,8 +9,8 @@
     "$$\\eta=H_0 + \\sum_{n=1}^N f_n H_n \\cos(V_{0n}+u_n+\\sigma_n t -\\kappa_n)$$\n",
     "参考文献\n",
     "- 水理公式集（2018年版）\n",
-    "- 和男村上. (1981). 最小自乗法による潮汐・潮流の調和分解とその精度. 港湾技研資料 / 国土交通省港湾技術研究所 編, 369, 1–38. https://ci.nii.ac.jp/naid/40001275093/\n",
-    "- 伊能康平, & 土屋主税. (2022). 潮汐表の計算について (No. 60). 海洋情報部研究報告."
+    "- 村上和男. (1981). 最小自乗法による潮汐・潮流の調和分解とその精度. 港湾技研資料 / 国土交通省港湾技術研究所 編, 369, 1–38. https://ci.nii.ac.jp/naid/40001275093/\n",
+    "- 伊能康平, 土屋主税. (2022). 潮汐表の計算について (No. 60). 海洋情報部研究報告."
    ]
   },
   {
